chrome/userChrome.css
/* ... */
.urlbarView-body-outer {
  margin-top: -2px !important;
  padding-top: 1px !important;
}
.urlbarView-row:first-of-type {
  margin-top: 5px !important;
}

/* URL bar customization */
#urlbar .urlbar-background {
  outline: none !important;
  border: none !important;
  height: 30px !important;
  transform: translateY(1px) !important;
  border-radius: 3px !important;
  transition: none !important;
}
.urlbar-input {
  margin-left: -2px !important;
}

/* Open URL bar & results */
#urlbar[open]>.urlbar-background,
#urlbar[breakout][breakout-extend][open] {
  border-radius: 3px 3px 8px 8px !important;
}

/* Zoom percentage in the URL bar */
#urlbar-zoom-button {
  display: none !important
}

/* Right-side go button */
.urlbar-go-button {
  transition: var(--basicBGAnimation) !important;
  border-radius: 4px !important;
  list-style-image: none !important;
  background-image: url(icons/forward.svg) !important;
  background-position: center center !important;
  background-size: 14px !important;
  background-repeat: no-repeat !important;
  width: 16px !important;
  max-height: 10px !important;
  content: none !important;

  &:hover {
    background-color: var(--textButtonHover) !important;
  }
  &:active {
    background-color: var(--textButtonPressed) !important;
  }
}

/* Search bar customization */
#searchbar {
  outline: none !important;
  border: none !important;
  height: 30px !important;
  border-radius: 3px !important;
  transition: none !important;
}
.searchbar-textbox{
  margin-left: 6px !important;
}
.searchbar-separator {
  display: none !important;
}
.search-panel-header,
#PopupSearchAutoComplete .autocomplete-richlistitem {
  height: 40px !important;
}
#PopupSearchAutoComplete richlistitem[selected="true"]::before {
  content: '';
  width: 3px;
  height: 16px;
  background-color: var(--accentAuto);
  animation: selectorBar 187ms forwards;
  border-radius: 99px;
  display: block;
  margin-inline: -9px 6px;
}
richlistitem:active {
  color: var(--textSecondary) !important;
}

/* Overrides for new search bar - recycles URL bar DOM */
#searchbar-new{
  #urlbar-searchmode-switcher {
    height: 24px !important;
    margin-top: 1px !important;
    margin-left: 2px !important;
  }
  .urlbar-background {
    border-radius: 3px !important;
  }
  &:hover .urlbar-background {
    background-color: var(--buttonHover) !important;
  }
  &:active .urlbar-background {
    background-color: var(--buttonPressed) !important;
  }
}

::-moz-search-clear-button {
  display: none !important;
}

#searchbar-new[open] {
  .urlbar-background {
    border: none !important;
    border-radius: 3px !important;
    height: 30px !important;
    margin-block: 9px 0 !important;
    margin-inline: 6px 6px;
    background-color: var(--inputActive) !important;
  }
  .urlbarView {
    margin-top: -10px !important;
    margin-inline: 6px 0 !important;
    width: calc(100% - 12px) !important;
  }
  #urlbar-searchmode-switcher {
    margin-left: 8px !important;
  }
  /* 'Press tab to search with' website entry - seemingly removed in 150 */
  /*.urlbarView-action-btn.urlbarView-dynamic-actions-button-0 {
  font-size: 12px !important;
  color: var(--textSecondary) !important;
  outline: 1px solid var(--controlStroke) !important;
  margin-inline: auto 1px !important;
  border-radius: 99px !important;
  & img {
  margin-inline: -6px -2px !important;
}
}*/
  .urlbar-go-button {
    margin-right: 8px !important;
    margin-top: 1px !important;
  }
}

/*
.textbox-contextmenu .context-menu-add-engine label {
  margin-left: 6px !important;
}*/

/* Restyle the 'add search engine' overlay icon */
.searchbar-search-icon-overlay {
  .searchbar-search-button[addengines="true"] > & {
    list-style-image: none !important;
    -moz-context-properties: fill !important;
    fill: var(--textAccentPrimary) !important;
    background-image: url(icons/plus.svg) !important;
    background-position: 2px 2px !important;
    background-color: var(--accentAuto) !important;
    border-radius: 99px !important;
    background-repeat: no-repeat !important;
    background-size: 8px !important;
  }
}
.searchbar-engine-one-off-add-engine > .button-box::after, 
moz-input-box > menupopup .context-menu-add-engine > .menu-iconic-left::after {
  background: url(icons/plus.svg) no-repeat 2px 2px !important;
  background-size: 8px !important;
  fill: var(--textAccentPrimary) !important;
  margin-inline: -6px -5px !important;
  margin-top: -16px !important;
  background-color: var(--accentAuto) !important;
  border-radius: 99px !important;
}

/* Proper bg color for the go button */
.search-go-button {
  transition: var(--basicBGAnimation) !important;
  list-style-image: none !important;
  background-image: url(icons/forward.svg);
  background-repeat: no-repeat;
  background-position: center center;
  background-size: 14px;

  &:hover {
    background-color: var(--textButtonHover) !important;
  }
  &:active {
    background-color: var(--textButtonPressed) !important;
  }
}

/* Move search icon to the right */
.searchbar-search-button {
  order: 1 !important;
}

/* Try to vertically center 'search with' text in the search dropdown */
.searchbar-engine-name {
  margin-bottom: .25em !important;
}

/* Remove 'this time search with' text */
.search-panel-one-offs-header {
  display: none !important;
}

/* Separator for add search dropdown footer */
.search-panel-one-offs {
  padding-top: 7px !important;
}
.search-one-offs {
  border-top: 1px solid var(--dropdownSeparator) !important;
  fill: var(--textSecondary) !important;
  fill-opacity: 1 !important;
}

/* Fix incorrect margin for the add search engine button */
.search-panel-one-offs button:first-of-type {
  margin-left: 6px !important;
}
/* ... */

